--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.3.5",
     "core-js": "^3.6.5",
+    "element-plus": "^2.3.3",
+    "qs": "^6.11.1",
     "vue": "^3.0.0",
     "vue-router": "^4.1.6"
   },
