--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "element-plus": "^2.3.3",
     "qs": "^6.11.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
