--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.3.5",
     "core-js": "^3.6.5",
     "element-plus": "^2.3.3",
+    "less": "^3.10.3",
     "qs": "^6.11.1",
     "vue": "^3.0.0",
     "vue-router": "^4.1.6",
@@ -23,7 +25,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "less-loader": "^4.1.0"
   },
   "eslintConfig": {
     "root": true,
